# umg-tiktok-blackout

./: .env.template  .gitignore  README.md  pyproject.toml  umg_tiktok_blackout_tutorial.ipynb
data/: umg_tiktok_blackout_weekly_streams.csv
src/: did_model.py  fetch_and_prepare_data.py  synthetic_control.py
src/umg_tiktok_blackout/: __init__.py
utils/: plotting.py
